Adds more functionality to temperature readings.